Mojo: Suppress validation error logging in some tests

These errors are useful for developers when developers make mistakes,
but they make a mess of test logs. Disable them in tests which are
particularly noisy.

BUG=659195

Review-Url: https://codereview.chromium.org/2448203002
Cr-Commit-Position: refs/heads/master@{#429393}

Former-commit-id: dafb77a4efa4ea0e6d2080ea239f401ff1c4a691